added battery info to statusbar

--- a/ui.conf
+++ b/ui.conf
@@ -27,7 +27,7 @@ set -g status-interval 1
 set -g status-left '#[fg=#{theme_primary},bg=#{theme_bg}]  #S '
 set -g status-left-length 20
 
-set -g status-right '#[fg=#{theme_primary},bg=#{theme_bg}]#[fg=#{theme_bg},bg=#{theme_primary}]   #U@#H #[fg=#{theme_bg},bg=#{theme_primary}]#[fg=#{theme_primary},bg=#{theme_bg}]   %H:%M '
+set -g status-right '#[fg=#{theme_primary},bg=#{theme_bg}]#[fg=#{theme_bg},bg=#{theme_primary}]   #U@#H #[fg=#{theme_bg},bg=#{theme_primary}]#[fg=#{theme_primary},bg=#{theme_bg}]   %H:%M #[fg=#{theme_bg_dim},bg=#{theme_bg}]#[fg=#{theme_bg},bg=#{theme_bg_dim}] #{battery_icon} #{battery_percentage} '
 set -g status-right-length 50
 
 setw -g window-status-current-style ''
