--- a/tmux.conf
+++ b/tmux.conf
@@ -56,5 +56,6 @@ source-file ~/.config/tmux/ui.conf
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 run '~/.config/tmux/plugins/tpm/tpm'
