--- a/tmux.conf
+++ b/tmux.conf
@@ -25,10 +25,12 @@ bind C-a send-prefix
 source-file ~/.config/tmux/mappings.conf
 source-file ~/.config/tmux/variant.conf
 source-file ~/.config/tmux/ui.conf
+source-file ~/.config/tmux/ssh.conf
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'pschmitt/tmux-ssh-split'
 
 run '~/.config/tmux/plugins/tpm/tpm'
